--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/coverphoto.jpg" alt="" /></a>
-					<h1>
-						<strong>I am Eric Chen</strong>,
-						a passionate software engineer.
-						<a href="assets/docs/Eric_Chen_Resume.pdf"><strong>Resume</strong></a>
-				
-					</h1>
+					<header>
+						<p>Software Engineer</p>
+						<p>Problem solver and lifelong learner</p>
+						<p><strong>I am Eric Chen</strong></p>	
+					</header>
 				</div>
 			</header>
 
@@ -38,7 +37,7 @@
 						   I also have background in translation and interpretation.  On my free time, I love to travel and try out different all kinds of food cuisines.
 						</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="assets/docs/Eric_Chen_Resume.pdf" class="button">Resume</a></li>
 						</ul>
 					</section>
 
@@ -528,6 +527,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
+					<h3><strong>Contact Me:</strong></h3>
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
