add vanilla js to update header

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/coverphoto.jpg" alt="" /></a>
 					<header>
-						<p>Software Engineer</p>
-						<p>Problem solver and lifelong learner</p>
-						<p><strong>I am Eric Chen</strong></p>	
+						<p id='h'>Software Engineer</p>
+						<p id='h'>Problem solver and lifelong learner</p>
+						<p id='h'>I am Eric Chen</p>	
 					</header>
 				</div>
 			</header>
@@ -34,6 +34,7 @@
 							<h2>My Story</h2>
 						</header>
 						<p>I am a full stack software engineer based in the San Francisco Bay Area, with a extensive experience with Ruby on Rails backend and React.js/Redux.js frontend.
+						   
 						   I also have background in translation and interpretation.  On my free time, I love to travel and try out different all kinds of food cuisines.
 						</p>
 						<ul class="actions">
