--- a/index.html
+++ b/index.html
@@ -34,8 +34,21 @@
 							<h2>My Story</h2>
 						</header>
 						<p>I am a full stack software engineer based in the San Francisco Bay Area, with a extensive experience with Ruby on Rails backend and React.js/Redux.js frontend.
-						   
-						   I also have background in translation and interpretation.  On my free time, I love to travel and try out different all kinds of food cuisines.
+						<br />
+						<br />
+						   Growing up I was always strong in math and I loved computers.  
+						   My best friend and I would come up with the craziest stories to convince the computer lab teacher to allow us to use the lab during lunch recess.
+						   Although I didn't know what it truly meant at the time, I've aspired to become a 'Computer Scientist' that writes things for the computer.
+						<br />
+						<br />
+						   I did not pursue Computer Science in college due to unforseen circumstances.  
+						   I end up working for the community for many years and used computer programs that were extremely inefficient.
+						   In order to make change, I realized it has guided me back to my childhood passion.
+						<br />
+						<br />
+						   Since embarking on this journey, hours and hours can pass like a blink of an eye when I am in the zone coding.
+						   Solving problems with elegant solutions and creating responsive, interactive applications gives me the most joy.
+						   My goal is to continue to increase my skills to help the community that has provide for me and those who are in need.
 						</p>
 						<ul class="actions">
 							<li><a href="assets/docs/Eric_Chen_Resume.pdf" class="button">Resume</a></li>
@@ -43,7 +56,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two">
+					<!-- <section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
@@ -56,31 +69,11 @@
 								<h3>Trippt</h3>
 								<p>Responsive travel app for travelers who are looking for new adventures.</p>
 							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article> -->
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
-					</section>
+					</section> -->
 
 					<section id='three'>
 						<h2>Skills</h2>
@@ -166,7 +159,46 @@
 							</div>
 						</div>
 					</section>
-
+					<section id="two">
+						<h2>Recent Work</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall">
+								<a href="https://robbyhood.herokuapp.com/#/" target="_blank" class="image fit thumb"><img
+										src="images/robbyhood.gif" alt="" /></a>
+								<h3>Robbyhood</h3>
+								<p>Single page app that allows user to mimic stock brokerage without spending money.</p>
+							</article>
+							<article class="col-6 col-12-xsmall">
+								<a href="https://trippt.herokuapp.com/#/" target="_blank" class="image fit thumb"><img
+										src="images/carousel.gif" alt="" /></a>
+								<h3>Trippt</h3>
+								<p>Responsive travel app for travelers who are looking for new adventures.</p>
+							</article>
+							<!-- <article class="col-6 col-12-xsmall work-item">
+													<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+													<h3>Tortor metus commodo</h3>
+													<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+												</article>
+												<article class="col-6 col-12-xsmall work-item">
+													<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+													<h3>Quam neque phasellus</h3>
+													<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+												</article>
+												<article class="col-6 col-12-xsmall work-item">
+													<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
+													<h3>Nunc enim commodo aliquet</h3>
+													<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+												</article>
+												<article class="col-6 col-12-xsmall work-item">
+													<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+													<h3>Risus ornare lacinia</h3>
+													<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+												</article> -->
+						</div>
+						<ul class="actions">
+							<li><a href="#" class="button">Full Portfolio</a></li>
+						</ul>
+					</section>
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
