--- a/index.html
+++ b/index.html
@@ -31,24 +31,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>My Story</h2>
+							<h2>I create things for you</h2>
 						</header>
 						<p>I am a full stack software engineer based in the San Francisco Bay Area, with a extensive experience with Ruby on Rails backend and React.js/Redux.js frontend.
-						<br />
-						<br />
-						   Growing up I was always strong in math and I loved computers.  
-						   My best friend and I would come up with the craziest stories to convince the computer lab teacher to allow us to use the lab during lunch recess.
-						   Although I didn't know what it truly meant at the time, I've aspired to become a 'Computer Scientist' that writes things for the computer.
-						<br />
-						<br />
-						   I did not pursue Computer Science in college due to unforseen circumstances.  
-						   I end up working for the community for many years and used computer programs that were extremely inefficient.
-						   In order to make change, I realized it has guided me back to my childhood passion.
-						<br />
-						<br />
-						   Since embarking on this journey, hours and hours can pass like a blink of an eye when I am in the zone coding.
-						   Solving problems with elegant solutions and creating responsive, interactive applications gives me the most joy.
-						   My goal is to continue to increase my skills to help the community that has provide for me and those who are in need.
+						
 						</p>
 						<ul class="actions">
 							<li><a href="assets/docs/Eric_Chen_Resume.pdf" class="button">Resume</a></li>
@@ -56,7 +42,7 @@
 					</section>
 
 				<!-- Two -->
-					<!-- <section id="two">
+					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
@@ -73,7 +59,7 @@
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
-					</section> -->
+					</section>
 
 					<section id='three'>
 						<h2>Skills</h2>
@@ -159,7 +145,7 @@
 							</div>
 						</div>
 					</section>
-					<section id="two">
+					<!-- <section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
@@ -174,7 +160,7 @@
 								<h3>Trippt</h3>
 								<p>Responsive travel app for travelers who are looking for new adventures.</p>
 							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall work-item">
 													<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 													<h3>Tortor metus commodo</h3>
 													<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -193,13 +179,43 @@
 													<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 													<h3>Risus ornare lacinia</h3>
 													<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-												</article> -->
+												</article>
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
-					</section>
+					</section> -->
 				<!-- Three -->
+					<section id="one">
+						<header class="major">
+							<h2>My Story</h2>
+						</header>
+						<p>
+							<!-- I am a full stack software engineer based in the San Francisco Bay Area, with a extensive experience with Ruby on
+							Rails backend and React.js/Redux.js frontend.
+							<br />
+							<br /> -->
+							Growing up I was always strong in math and I loved computers.
+							My best friend and I would come up with the craziest stories to convince the computer lab teacher to allow us to
+							use the lab during lunch recess.
+							Although I didn't know what it truly meant at the time, I've aspired to become a 'Computer Scientist' that
+							writes things for the computer.
+							<br />
+							<br />
+							I did not pursue Computer Science in college due to unforseen circumstances.
+							I end up working for the community for many years and used computer programs that were extremely inefficient.
+							In order to make change, I realized it has guided me back to my childhood passion.
+							<br />
+							<br />
+							Since embarking on this journey, hours and hours can pass like a blink of an eye when I am in the zone coding.
+							Solving problems with elegant solutions and creating responsive, interactive applications gives me the most joy.
+							My goal is to continue to increase my skills to help the community that has provide for me and those who are in
+							need.
+						</p>
+						<!-- <ul class="actions">
+							<li><a href="assets/docs/Eric_Chen_Resume.pdf" class="button">Resume</a></li>
+						</ul> -->
+					</section>
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
@@ -560,12 +576,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
-					<h3><strong>Contact Me:</strong></h3>
+					<h3><strong>Contacts:</strong></h3>
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon brands fa-angellist"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="#" class="icon brands fa-facebook"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Eric Chen 2020</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
