update my story and format get in touch

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>I create things for you</h2>
+							<h2>Let's build something together!</h2>
 						</header>
 						<p>I am a full stack software engineer based in the San Francisco Bay Area, with a extensive experience with Ruby on Rails backend and React.js/Redux.js frontend.
 						
@@ -197,20 +197,21 @@
 							<br /> -->
 							Growing up I was always strong in math and I loved computers.
 							My best friend and I would come up with the craziest stories to convince the computer lab teacher to allow us to
-							use the lab during lunch recess.
-							Although I didn't know what it truly meant at the time, I've aspired to become a 'Computer Scientist' that
-							writes things for the computer.
+							use the lab during lunch.
+							As a child, I aspired to become a 'Computer Scientist' that writes things for the computer.
 							<br />
 							<br />
 							I did not pursue Computer Science in college due to unforseen circumstances.
-							I end up working for the community for many years and used computer programs that were extremely inefficient.
-							In order to make change, I realized it has guided me back to my childhood passion.
+							I worked non-profit serving the community and used computer programs that were extremely inefficient.
+							In realized tht in order to make change, I needed to commit to my childhood dream.
 							<br />
 							<br />
-							Since embarking on this journey, hours and hours can pass like a blink of an eye when I am in the zone coding.
-							Solving problems with elegant solutions and creating responsive, interactive applications gives me the most joy.
-							My goal is to continue to increase my skills to help the community that has provide for me and those who are in
-							need.
+							Since embarking on this journey, hours and hours can pass in a blink of an eye when I am in the zone coding.
+							I understand and appreciate the amount of problem solving skills, creativity and teamwork required to build something truly amazing. 
+							<br />
+							<br />
+
+
 						</p>
 						<!-- <ul class="actions">
 							<li><a href="assets/docs/Eric_Chen_Resume.pdf" class="button">Resume</a></li>
@@ -218,9 +219,9 @@
 					</section>
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p></p>
 						<div class="row">
-							<div class="col-8 col-12-small">
+							<!-- <div class="col-8 col-12-small">
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -231,22 +232,20 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</div>
+							</div> -->
 							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
+								<ul class="footer labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										<p>San Francisco, CA</p>
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										<p>415-290-3971</p>
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<p>echen831@gmail.com</p>
 									</li>
 								</ul>
 							</div>
