update my story

--- a/index.html
+++ b/index.html
@@ -190,49 +190,48 @@
 						<header class="major">
 							<h2>My Story</h2>
 						</header>
-						<p>
+						<div>
 							<!-- I am a full stack software engineer based in the San Francisco Bay Area, with a extensive experience with Ruby on
 							Rails backend and React.js/Redux.js frontend.
 							<br />
 							<br /> -->
-							Growing up I was always strong in math and I loved computers.
-							My best friend and I would come up with the craziest stories to convince the computer lab teacher to allow us to
-							use the lab during lunch.
-							As a child, I aspired to become a 'Computer Scientist' that writes things for the computer.
-							<br />
-							<br />
-							I did not pursue Computer Science in college due to unforseen circumstances.
-							I worked non-profit serving the community and used computer programs that were extremely inefficient.
-							In realized tht in order to make change, I needed to commit to my childhood dream.
-							<br />
-							<br />
-							Since embarking on this journey, hours and hours can pass in a blink of an eye when I am in the zone coding.
-							I understand and appreciate the amount of problem solving skills, creativity and teamwork required to build something truly amazing. 
-							<br />
-							<br />
+							<span class='story-bullet'>
+								<p>
+									Growing up I was always strong in math and I loved computers.
+									My best friend and I would come up with the craziest stories to convince the computer lab teacher to allow us to
+									use the lab during lunch.
+									As a child,I aspired to become a 'Computer Scientist' that writes things for the computer.
+								</p>
+							</span>
+							<span>
+								<p>
+									I did not pursue Computer Science in college due to unforseen circumstances.
+									I worked non-profit serving the community and used computer programs that were extremely inefficient.
+									In realized tht in order to make change, I needed to commit to my childhood dream.
+								</p>
+							</span>
+							<span>
+								<p>
+									Since embarking on this journey, hours and hours can pass in a blink of an eye when I am in the zone coding.  
+									I understand and appreciate the amount of problem solving skills, creativity and teamwork required to build something truly amazing. 
+								</p>
+							</span>
+							<span>
+								<p>
+									Outside of programming, I am an avid Bay Area sports fan.
+									I also enjoy translation works of classic poetry from different cultures.
+								</p>
+							</span>
 
-
-						</p>
+							</div>
 						<!-- <ul class="actions">
 							<li><a href="assets/docs/Eric_Chen_Resume.pdf" class="button">Resume</a></li>
 						</ul> -->
 					</section>
 					<section id="three">
-						<h2>Get In Touch</h2>
+						<h2>Please keep in touch!</h2>
 						<p></p>
 						<div class="row">
-							<!-- <div class="col-8 col-12-small">
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div> -->
 							<div class="col-4 col-12-small">
 								<ul class="footer labeled-icons">
 									<li>
@@ -247,7 +246,28 @@
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
 										<p>echen831@gmail.com</p>
 									</li>
+									<ul class="actions">
+										<li><a href="#" class="button">Full Portfolio</a></li>
+									</ul>
 								</ul>
+							</div>
+							<div class="col-5 col-12-small">
+								<article class="col-6 col-12-small">
+									<img src="https://i.pinimg.com/originals/72/5c/87/725c87244bc67c9ecd857c5c29476f26.gif"
+										 class="image fit thumb"
+										 id="thank-you"
+											alt="" />
+								</article>
+								<!-- <form method="post" action="#">
+									<div class="row gtr-uniform gtr-50">
+										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
+										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+									</div>
+								</form>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
+								</ul> -->
 							</div>
 						</div>
 					</section>
