add links to contacts and open on new tab

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						
 						</p>
 						<ul class="actions">
-							<li><a href="assets/docs/Eric_Chen_Resume.pdf" class="button">Resume</a></li>
+							<li><a href="assets/docs/Eric_Chen_Resume.pdf" target='_blank' class="button">Resume</a></li>
 						</ul>
 					</section>
 
@@ -597,10 +597,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner">
 					<h3><strong>Contacts:</strong></h3>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-angellist"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/eric-chen-782b951a9/" target='_blank' class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/echen831" target='_blank' class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://angel.co/u/eric-chen-80" target='_blank' class="icon brands fa-angellist"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://www.facebook.com/profile.php?id=11708937" target='_blank' class="icon brands fa-facebook"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Eric Chen 2020</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
