updated my story section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<header class="major">
 							<h2>Let's build something together!</h2>
 						</header>
-						<p>I am a full stack software engineer based in the San Francisco Bay Area, with a extensive experience with Ruby on Rails backend and React.js/Redux.js frontend.
+						<p>I am a full stack software engineer based in the San Francisco Bay Area, with extensive experience with Ruby on Rails backend and React.js/Redux.js frontend.
 						
 						</p>
 						<ul class="actions">
@@ -200,14 +200,14 @@
 									Growing up I was always strong in math and I loved computers.
 									My best friend and I would come up with the craziest stories to convince the computer lab teacher to allow us to
 									use the lab during lunch.
-									As a child,I aspired to become a 'Computer Scientist' that writes things for the computer.
+									As a child, I aspired to become a 'Computer Scientist' that writes things for the computer.
 								</p>
 							</span>
 							<span>
 								<p>
 									I did not pursue Computer Science in college due to unforseen circumstances.
 									I worked non-profit serving the community and used computer programs that were extremely inefficient.
-									In realized tht in order to make change, I needed to commit to my childhood dream.
+									I realized that in order to make change, I needed to commit to my childhood dream.
 								</p>
 							</span>
 							<span>
@@ -219,7 +219,7 @@
 							<span>
 								<p>
 									Outside of programming, I am an avid Bay Area sports fan.
-									I also enjoy translation works of classic poetry from different cultures.
+									I also enjoy reading and translating classic poetry from different cultures.
 								</p>
 							</span>
 
