--- a/index.html
+++ b/index.html
@@ -66,11 +66,13 @@
 						<div class="row">
 							<div class='icon'>
 								<img src="https://library.kissclipart.com/20180925/yoe/kissclipart-javascript-clipart-javascript-library-jquery-0fb817622aa27de4.png" alt="" width="50" height="50">
+								<!-- <i class="fab fa-js-square fa-4x"></i> -->
 								<p>Javascript</p>
 							</div>
 							<div class='icon'>
 								<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1024px-Python-logo-notext.svg.png"
 									alt="" width="50" height="50">
+								<!-- <i class="fab fa-python fa-4x"></i> -->
 								<p>Python</p>
 							</div>
 							<div class='icon'>
@@ -82,6 +84,7 @@
 								<p>Rails</p>
 							</div>
 							<div class='icon'>
+								<!-- <i class="fab fa-react fa-4x"></i> -->
 								<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/React.svg/1200px-React.svg.png" alt="" width="60" height="50">
 								<p>React</p>
 							</div>
@@ -100,8 +103,9 @@
 								<p>NPM</p>
 							</div>
 							<div class='icon'>
-								<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/600px-HTML5_Badge.svg.png" alt="" width="55" height="50">
-								<p>HTML5</p>
+								<!-- <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/600px-HTML5_Badge.svg.png" alt="" width="55" height="50"> -->
+								<div style='font-size: 1rem'><i class="fab fa-html5 fa-3x" style="color:#ff3300;"></i></div>
+								</i><p>HTML5</p>
 							</div>
 							<div class='icon'>
 								<img src="https://i.dlpng.com/static/png/359589_preview.png"
@@ -140,8 +144,11 @@
 								<p>PostgreSQL</p>
 							</div>
 							<div class='icon'>
-								<img src="https://p7.hiclipart.com/preview/509/571/818/cascading-style-sheets-logo-css3-html-web-development-world-wide-web.jpg" alt="" width="45" height="50">
-								<p>CSS3</p>
+								<!-- <img src="https://p7.hiclipart.com/preview/509/571/818/cascading-style-sheets-logo-css3-html-web-development-world-wide-web.jpg" alt="" width="45" height="50"> -->
+								<div style="font-size: 1rem">
+									<i class="fab fa-css3-alt fa-3x" style="color:#24a7ff;"></i>
+								</div>
+								</i><p>CSS3</p>
 							</div>
 						</div>
 					</section>
