--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 								</i><p>HTML5</p>
 							</div>
 							<div class='icon'>
-								<img src="https://i.dlpng.com/static/png/359589_preview.png"
+								<img src="https://ih0.redbubble.net/image.352416471.2750/pp,550x550.u4.jpg"
 								alt="" width="50" height="50">
 								<p>mongoDB</p>
 							</div>
