fix cover photo box shadow

--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
-								<a href="https://robbyhood.herokuapp.com/#/" target="_blank" class="image fit thumb"><img class='link-icon' src="images/robbyhood.PNG" alt="" /></a>
+								<a href="https://robbyhood.herokuapp.com/#/" target="_blank" id='project' class="image fit thumb"><img class='link-icon' src="images/robbyhood.PNG" alt="" /></a>
 								<h3>Robbyhood</h3>
 								<p>Single page app that allows user to mimic stock brokerage without spending money.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="https://trippt.herokuapp.com/#/" target="_blank" class="image fit thumb"><img class='link-icon' src="images/trippt-experiences.png" alt="" /></a>
+								<a href="https://trippt.herokuapp.com/#/" target="_blank" id='project' class="image fit thumb"><img class='link-icon' src="images/trippt-experiences.png" alt="" /></a>
 								<h3>Trippt</h3>
 								<p>Responsive travel app for travelers who are looking for new adventures.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="https://github.com/echen831/Food-Pantry" target="_blank" class="image fit thumb"><img class='link-icon' src="images/Instapig.png" alt="" /></a>
+								<a href="https://github.com/echen831/Food-Pantry" target="_blank" id='project' class="image fit thumb"><img class='link-icon' src="images/Instapig.png" alt="" /></a>
 								<h3>InstaPig</h3>
 								<p>Vanilla Javascript app for those intrested in helping the piggy fullfil orders!</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="https://rasheeq-ahmed.github.io/StoptheSpread/" target="_blank" class="image fit thumb"><img class='link-icon' src="images/kanban.png" alt="" /></a>
+								<a href="https://rasheeq-ahmed.github.io/StoptheSpread/" target="_blank" id='project' class="image fit thumb"><img class='link-icon' src="images/kanban.png" alt="" /></a>
 								<h3>StopTheSpread</h3>
 								<p>Responsive health themed drag and drop kanban board built under 3 days for MintBean Hackathon.</p>
 							</article>
