--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<p>Responsive travel app for travelers who are looking for new adventures.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="https://github.com/echen831/Food-Pantry" target="_blank" id='project' class="image fit thumb"><img class='link-icon' src="images/Instapig.png" alt="" /></a>
+								<a href="https://echen831.github.io/InstaPig/" target="_blank" id='project' class="image fit thumb"><img class='link-icon' src="images/Instapig.png" alt="" /></a>
 								<h3>InstaPig</h3>
 								<p>Vanilla Javascript app for those intrested in helping the piggy fullfil orders!</p>
 							</article>
