--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 		<title>Eric Chen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property="og:title" content="Portfolio">
+		<meta property="og:description"
+			content="">
+		<meta property="og:image" content="https://i.imgur.com/K1Upu78.png?1">
+		<meta property="og:url" content="https://echen831.github.io/Eric-Chen/">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
