update avatar size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:title" content="Portfolio">
 		<meta property="og:description"
 			content="">
-		<meta property="og:image" content="https://i.imgur.com/xLo6Gnm.png">
+		<meta property="og:image" content="https://i.imgur.com/K1Upu78.png?1">
 		<meta property="og:url" content="https://echen831.github.io/Eric-Chen/">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
